<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KillExam</string>
    <string name="title_section1">任务清单</string>
    <string name="title_section2">添加任务</string>
    <string name="title_section3">进度表</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="create_task_finish_date">完成时间</string>
    <string name="create_task_spend_time">花费时间</string>
    <string name="create_task_task_content">任务内容</string>
    <string name="create_task_remind_method">提醒方式</string>
    <string name="create_task_task_attribute">任务性质</string>
    <string name="create_task_button">创建任务</string>
    <string name="create_task_color_tag">标记颜色</string>

    <string name="create_picker">点击输入</string>
    <string name="title_activity_choose_belong">chooseBelongActivity</string>

    <string name="hello_world">Hello world!</string>
</resources>
