<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yuwei.killexam.taskFragments.CreateTaskFragment
    ">


    <LinearLayout
        style="@style/fragmentLinearLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/edit_task_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:orientation="horizontal">

            <TextView
                style="@style/createTaskTextView"
                android:text="任务名字" />

            <EditText
                android:id="@+id/editTaskNameText"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_weight="0.95"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="2dp"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editTaskAttribute"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/createTaskTextView"
                android:text="@string/create_task_task_attribute" />


            <Spinner
                android:id="@+id/editTaskAttributeSpinner"
                style="@style/spinnerStyle"
                android:clickable="false" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/editTaskColorTag"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/createTaskTextView"
                android:text="@string/create_task_color_tag" />


            <Spinner
                android:id="@+id/editTaskColorTagSpinner"
                style="@style/spinnerStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editRemindMethod"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/createTaskTextView"
                android:text="@string/create_task_remind_method" />

            <Spinner
                android:id="@+id/editRemindMethodSpinner"
                style="@style/spinnerStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editTaskSpendTime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    style="@style/createTaskTextView"
                    android:text="@string/create_task_spend_time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.05"
                android:gravity="start"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/editSpendTimePickerHours"
                    style="@style/numberPickerStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="时"
                    android:textSize="@dimen/create_task_text_size" />

                <NumberPicker
                    android:id="@+id/editSpendTimePickerMinutes"
                    style="@style/numberPickerStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="分"
                    android:textSize="@dimen/create_task_text_size" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/editTaskFinishDate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/createTaskTextView"
                android:text="@string/create_task_finish_date" />

            <info.hoang8f.widget.FButton
                android:id="@+id/editFinishDatePicker"
                android:layout_width="12dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.94"
                android:text="@string/create_picker"
                android:textSize="18sp"
                fbutton:buttonColor="@color/silver_deep" />


            <!--<DatePicker-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/datePicker" />-->

        </LinearLayout>



    </LinearLayout>


</RelativeLayout>
